# MortonCode-BVH-KD

./: .gitignore  BVH.hpp  BoundBox.hpp  CMakeLists.txt  MortonCode-BVH-KD.sln  MortonCode-BVH-KD.vcxproj  Point3D.hpp  README.md  Screen.hpp  Source.cpp  Vector3D.hpp  memory.hpp
core/: BVH.hpp  Screen.hpp
geometry/: BoundBox.hpp  Point3D.hpp
